--- a/SetURL/manifest.json
+++ b/SetURL/manifest.json
@@ -16,7 +16,8 @@
         "messagesRead",
         "messagesMove",
         "accountsRead",
-        "accountsFolders"
+        "accountsFolders",
+        "messagesDelete"
     ],
     "background": {
         "scripts": [
